Fix refactoring bugs